plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.sixstar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'mysql:mysql-connector-java:8.0.32'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Swagger
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2")
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// OpenVidu
	implementation 'io.openvidu:openvidu-java-client:2.30.0'
	// flywaydb/flyway-core // flyway-mysql
	implementation 'org.flywaydb:flyway-core:10.16.0'
	implementation 'org.flywaydb:flyway-mysql:10.16.0'
	// websocket
	// WebSocket 스타터
	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.2'
	// Spring Messaging
	implementation 'org.springframework:spring-messaging:6.1.10'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	archiveBaseName = 'radiu'
	archiveVersion = '0.0.1-SNAPSHOT'
	destinationDirectory = file("${buildDir}/libs")
}
